[package]
name = "krk_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crypto-common = "0.1"
sha2 = "0.10"
hmac = "0.12"
cucumber = { version = "0.20.2", features = ["output-junit"] }
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2"

[[test]]
name = "api"
harness = false  # allows Cucumber to print output instead of libtest
